--- a/index.html
+++ b/index.html
@@ -5,6 +5,202 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header_menu">
+        <ul class="header_menu_list">
+          <li class="header_menu_item header_menu_item_active">
+            <a>главная</a>
+          </li>
+          <li class="header_menu_item">
+            <a href="#"
+              >посмотреть лоты
+              <div class="line"></div
+            ></a>
+          </li>
+          <li class="header_menu_item">
+            <a href="#"
+              >об аукционе
+              <div class="line"></div
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#"
+        ><img class="logo" src="./images/logo-black.svg" alt="Оно тебе надо"
+      /></a>
+      <address class="address_header">
+        <a href="tel:+99995555555"
+          >+9 999 555 5555
+          <div class="line"></div
+        ></a>
+        <a href="malito:info@sobaka.ge"
+          >info@sobaka.ge
+          <div class="line"></div
+        ></a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay">
+          <h1 class="cover_title">
+            <span class="text_start"
+              >О
+              <span class="cover_title_letter_spacing">НО</span>
+            </span>
+            <span class="text_center"
+              >ТЕБ
+              <span class="cover_title_letter_spacing">Е</span>
+            </span>
+            <span class="text_right">
+              <span class="cover_title_letter_spacing">Н</span>АД
+              <span class="no_letter_spacing">О</span>
+            </span>
+          </h1>
+          <div class="cover_subtitle">
+            <p class="cover_text">Аукцион вещей, в которые никто не верил</p>
+            <button class="cover_button">Сделать ставку</button>
+          </div>
+        </div>
+      </section>
+      <section class="lots">
+        <h2 class="lots_title">ЛОТЫ</h2>
+        <ul class="lots_list">
+          <a href="#">
+            <li class="lots_item lots_left">
+              <div class="overlay"></div>
+              <h4 class="lots_item_title">
+                Фильм режиссёра, который бросил киношколу
+              </h4>
+              <p class="lots_item_text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+              </p>
+            </li>
+          </a>
+          <a href="#">
+            <li class="lots_item lots_center">
+              <div class="overlay"></div>
+              <h4 class="lots_item_title">
+                Книга, где описан один скучный день из жизни рекламного агента
+              </h4>
+              <p class="lots_item_text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+                переходами на древнеанглийский. В ней одновременно
+                рассказывается о 16 июня 1904 года и об истории литературы,
+                начиная с античных времён. И это всё накладывается на эпическую
+                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
+                Джойса?
+              </p>
+            </li>
+          </a>
+          <a href="#">
+            <li class="lots_item lots_right">
+              <div class="overlay"></div>
+              <h4 class="lots_item_title">
+                Картина, которую повторит даже 5-летний сын маминой подруги
+              </h4>
+              <p class="lots_item_text">
+                Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                котиков<span class="lots_item_letter_sapicng">...</span>
+                Сколько бы вы на такое поставили, если бы не знали, что это —
+                одна из революционных работ Кандинского?
+              </p>
+            </li>
+          </a>
+        </ul>
+        <a class="lots_more" href="#"
+          >посмотреть больше
+          <div class="line"></div
+        ></a>
+      </section>
+      <section class="about">
+        <div class="about_logo">
+          <img
+            class="about_logo_image"
+            src="./images/logo-white.svg"
+            alt="Оно тебе надо"
+          />
+        </div>
+        <div class="about_content">
+          <h2 class="about_title">Об аукционе</h2>
+          <p class="about_text">
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p class="about_text">
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address_footer">
+        <a href="tel:+99995555555"
+          >+9 999 555 5555
+          <div class="line"></div
+        ></a>
+        <a href="malito:info@sobaka.ge"
+          >info@sobaka.ge
+          <div class="line"></div
+        ></a>
+        <p>наб. Принсенграхт 263- 265, Амстердам</p>
+      </address>
+      <nav class="footer_menu">
+        <ul class="footer_list">
+          <li class="footer_item">
+            <a>главная</a>
+          </li>
+          <li class="footer_item">
+            <a href="#"
+              >посмотреть лоты
+              <div class="line"></div
+            ></a>
+          </li>
+          <li class="footer_item">
+            <a href="#"
+              >об аукционе
+              <div class="line"></div
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="footer_social">
+        <ul class="social_list">
+          <li class="social_item">
+            <a href="#"
+              ><img class="social_item_logo" src="./images/yt.svg" alt="Ютуб"
+            /></a>
+          </li>
+          <li class="social_item">
+            <a href="#"
+              ><img class="social_item_logo" src="./images/vk.svg" alt="ВК"
+            /></a>
+          </li>
+          <li class="social_item">
+            <a href="#"
+              ><img
+                class="social_item_logo"
+                src="./images/pinterest.svg"
+                alt="Пинтерест"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+    </footer>
+  </body>
 </html>
