Исправил префикс в почте

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           >+9 999 555 5555
           <div class="line"></div
         ></a>
-        <a href="malito:info@sobaka.ge"
+        <a href="mailto:info@sobaka.ge"
           >info@sobaka.ge
           <div class="line"></div
         ></a>
@@ -154,7 +154,7 @@
           >+9 999 555 5555
           <div class="line"></div
         ></a>
-        <a href="malito:info@sobaka.ge"
+        <a href="mailto:info@sobaka.ge"
           >info@sobaka.ge
           <div class="line"></div
         ></a>
