исправил ошибки на которые указал ревьюер

--- a/index.html
+++ b/index.html
@@ -13,112 +13,103 @@
     <header class="header">
       <nav class="header_menu">
         <ul class="header_menu_list">
-          <li class="header_menu_item header_menu_item_active">
-            <a>главная</a>
+          <li class="header_menu_item menu_item_active">
+            <a class="menu_item_active" href="#">главная</a>
           </li>
           <li class="header_menu_item">
-            <a href="#"
-              >посмотреть лоты
-              <div class="line"></div
-            ></a>
+            <a href="#">посмотреть лоты </a>
           </li>
           <li class="header_menu_item">
-            <a href="#"
-              >об аукционе
-              <div class="line"></div
-            ></a>
+            <a href="#">об аукционе </a>
           </li>
         </ul>
       </nav>
       <a href="#"
         ><img class="logo" src="./images/logo-black.svg" alt="Оно тебе надо"
       /></a>
-      <address class="address_header">
-        <a href="tel:+99995555555"
-          >+9 999 555 5555
-          <div class="line"></div
-        ></a>
-        <a href="mailto:info@sobaka.ge"
-          >info@sobaka.ge
-          <div class="line"></div
-        ></a>
+      <address class="address address_header">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
     </header>
     <main>
       <section class="cover">
-        <div class="overlay">
-          <h1 class="cover_title">
-            <span class="text_start"
-              >О
-              <span class="cover_title_letter_spacing">НО</span>
-            </span>
-            <span class="text_center"
-              >ТЕБ
-              <span class="cover_title_letter_spacing">Е</span>
-            </span>
-            <span class="text_right">
-              <span class="cover_title_letter_spacing">Н</span>АД
-              <span class="no_letter_spacing">О</span>
-            </span>
-          </h1>
-          <div class="cover_subtitle">
-            <p class="cover_text">Аукцион вещей, в которые никто не верил</p>
-            <button class="cover_button">Сделать ставку</button>
-          </div>
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="text_start"
+            >О
+            <span class="cover_title_letter_spacing">НО</span>
+          </span>
+          <span class="text_center"
+            >ТЕБ
+            <span class="cover_title_letter_spacing">Е</span>
+          </span>
+          <span class="text_right">
+            <span class="cover_title_letter_spacing">Н</span>АД
+            <span class="no_letter_spacing">О</span>
+          </span>
+        </h1>
+        <div class="cover_subtitle">
+          <p class="cover_text">Аукцион вещей, в которые никто не верил</p>
+          <button class="cover_button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
         <h2 class="lots_title">ЛОТЫ</h2>
         <ul class="lots_list">
-          <li class="lots_item lots_left">
-            <a href="#">
-              <div class="overlay"></div>
-              <h4 class="lots_item_title">
-                Фильм режиссёра, который бросил киношколу
-              </h4>
-              <p class="lots_item_text">
-                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
-                ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
-              </p>
+          <li class="lots_item">
+            <a class="link_lots" href="#">
+              <article class="lots_card lots_left">
+                <div class="overlay"></div>
+                <h3 class="lots_item_title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="lots_item_text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
             </a>
           </li>
-          <li class="lots_item lots_center">
-            <a href="#">
-              <div class="overlay"></div>
-              <h4 class="lots_item_title">
-                Книга, где описан один скучный день из жизни рекламного агента
-              </h4>
-              <p class="lots_item_text">
-                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-                переходами на древнеанглийский. В ней одновременно
-                рассказывается о 16 июня 1904 года и об истории литературы,
-                начиная с античных времён. И это всё накладывается на эпическую
-                поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса
-                Джойса?
-              </p>
+          <li class="lots_item">
+            <a class="link_lots" href="#">
+              <article class="lots_card lots_center">
+                <div class="overlay"></div>
+                <h3 class="lots_item_title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="lots_item_text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
             </a>
           </li>
-          <li class="lots_item lots_right">
-            <a href="#">
-              <div class="overlay"></div>
-              <h4 class="lots_item_title">
-                Картина, которую повторит даже 5-летний сын маминой подруги
-              </h4>
-              <p class="lots_item_text">
-                Ну действительно, там линия, тут кружочек, а здесь и вовсе
-                что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
-                котиков<span class="lots_item_letter_sapicng">...</span>
-                Сколько бы вы на такое поставили, если бы не знали, что это —
-                одна из революционных работ Кандинского?
-              </p>
+          <li class="lots_item">
+            <a class="link_lots" href="#">
+              <article class="lots_card lots_right">
+                <div class="overlay"></div>
+                <h3 class="lots_item_title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="lots_item_text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков<span class="lots_item_letter_sapicng">...</span>
+                  Сколько бы вы на такое поставили, если бы не знали, что это —
+                  одна из революционных работ Кандинского?
+                </p>
+              </article>
             </a>
           </li>
         </ul>
-        <a class="lots_more" href="#"
-          >посмотреть больше
-          <div class="line"></div
-        ></a>
+        <a class="lots_more" href="#">посмотреть больше </a>
       </section>
       <section class="about">
         <div class="about_logo">
@@ -149,33 +140,21 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address_footer">
-        <a href="tel:+99995555555"
-          >+9 999 555 5555
-          <div class="line"></div
-        ></a>
-        <a href="mailto:info@sobaka.ge"
-          >info@sobaka.ge
-          <div class="line"></div
-        ></a>
+      <address class="address address_footer">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
       </address>
       <nav class="footer_menu">
         <ul class="footer_list">
           <li class="footer_item">
-            <a>главная</a>
+            <a class="menu_item_active" href="#">главная</a>
           </li>
           <li class="footer_item">
-            <a href="#"
-              >посмотреть лоты
-              <div class="line"></div
-            ></a>
+            <a href="#">посмотреть лоты </a>
           </li>
           <li class="footer_item">
-            <a href="#"
-              >об аукционе
-              <div class="line"></div
-            ></a>
+            <a href="#">об аукционе </a>
           </li>
         </ul>
       </nav>
